dark mode compatibility, calendar bugfix

--- a/globals.css
+++ b/globals.css
@@ -9,35 +9,35 @@
   }
 
   body {
-    @apply text-sm md:text-base;
+    @apply text-sm md:text-base  bg-white dark:bg-black text-black dark:text-zinc-100;
   }
 
   h1 {
-    @apply text-2xl font-bold md:text-4xl;
+    @apply text-2xl font-bold md:text-4xl dark:text-zinc-100 mt-5;
   }
  
   h2 {
-    @apply text-xl font-bold md:text-3xl;
+    @apply text-xl font-bold md:text-3xl dark:text-zinc-100 mt-5;
   }
  
   h3 {
-    @apply text-lg font-bold md:text-2xl;
+    @apply text-lg font-bold md:text-2xl dark:text-zinc-100 mt-5;
   }
  
   h4 {
-    @apply text-base font-bold md:text-lg;
+    @apply text-base font-bold md:text-lg dark:text-zinc-100 mt-3;
   }
 
   h5 {
-    @apply text-sm font-bold md:text-base;
+    @apply text-sm font-bold md:text-base dark:text-zinc-100 mt-3;
   }
 
   h6 {
-    @apply text-xs font-bold md:text-sm;
+    @apply text-xs font-bold md:text-sm dark:text-zinc-100 mt-3;
   }
 
   p {
-    @apply text-sm leading-relaxed md:text-base;
+    @apply text-sm leading-relaxed md:text-base text-black dark:text-zinc-300;
   }
 
   a {
@@ -54,6 +54,10 @@
 
   li {
     @apply list-item mb-2;
+  }
+
+  textarea {
+    @apply block w-full text-sm dark:text-zinc-100;
   }
 
   blockquote {
@@ -73,20 +77,20 @@
   }
 
   table {
-    @apply min-w-full divide-y divide-zinc-200;
+    @apply min-w-full divide-y divide-zinc-200 dark:divide-zinc-700 rounded-lg;
   }
 
   thead {
-    @apply bg-zinc-50;
+    @apply bg-zinc-50 dark:bg-zinc-800;
   }
 
   tbody {
-    @apply bg-white divide-y divide-zinc-200;
+    @apply bg-white divide-y divide-zinc-200 dark:bg-zinc-900 dark:divide-zinc-700;
   }
 
   th, td {
-    @apply px-6 py-4 text-left text-xs font-medium text-zinc-500 uppercase tracking-wider;
-  } 
+    @apply px-6 py-4 text-left text-xs font-medium text-zinc-500 uppercase tracking-wider dark:text-zinc-300;
+  }
 }
 
 .target {
